fix z-index on carousel caption and ol-carousel-indicator

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5421,6 +5421,7 @@ button.close {
 }
 .carousel-inner > .item {
   position: relative;
+  z-index: -1;
   display: none;
   -webkit-transition: .6s ease-in-out left;
           transition: .6s ease-in-out left;
@@ -5529,7 +5530,7 @@ button.close {
   position: absolute;
   bottom: 10px;
   left: 50%;
-  z-index: 15;
+  /*z-index: 15;*/
   width: 60%;
   padding-left: 0;
   margin-left: -30%;
